Fix Header layout on tablet breakpoint

--- a/client/src/components/CartModal/CartModal.scss
+++ b/client/src/components/CartModal/CartModal.scss
@@ -14,6 +14,11 @@
   max-width: 20.4375rem;
   padding: 2rem 1.75rem;
 
+  @include tablet {
+    // right: 2.5rem;
+    margin-right: 2.5rem;
+  }
+
   &__overlay {
     @extend .navigation-modal__overlay;
   }
